# thinkdecision

./: .gitignore  API_INTEGRATION_GUIDE.md  API_RESPONSE_STANDARD.md  BACKEND_STATUS.md  COMPREHENSIVE_AUDIT_FIXES.md  CRITICAL_FIXES_COMPLETE.md  FRONTEND_INTEGRATION_CHECKLIST.md  QUICK_START_EXAMPLES.md  README.md  start-all.ps1
backend/: .env  .env.example  BACKUP_STRATEGY.md  IMPROVEMENTS_16-20.md  MIGRATION_GUIDE.md  MIGRATION_SQL.sql  QUICK_REFERENCE_16-20.md  README.md  VERIFICATION_SCRIPT.sql  alembic.ini  check_invites.py  create_test_expert.py  package-lock.json  package.json  pyproject.toml  server.js  start.ps1
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  aggregated_result.py  alternative.py  case.py  comparison.py  criteria.py  expert_invite.py  user.py
backend/app/routers/: __init__.py  alternatives.py  anp.py  auth.py  cases.py  comparisons.py  conflicts.py  criteria.py  experts.py  results.py
backend/app/schemas/: alternative.py  auth.py  case.py  comparison.py  criteria.py  expert.py  result.py
backend/migrations/: 001_create_dependencies_table.sql  002_add_conflict_tracking.py  003_add_anp_support.py  env.py
backend/migrations/versions/: 001_initial_schema.py
backend/src/: app.js
backend/src/config/: supabase.js  swagger.js
backend/src/errors/: AppErrors.js
backend/src/middleware/: asyncHandler.js  authenticate.js  authorize.js  errorHandler.js  (+6 more)
backend/tests/: ahpService.test.js  authenticate.test.js  authorize.test.js  test_agreement.py  test_anp.py  validationService.test.js
(+197 files in other folders)
