[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "think-decision-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.27.0",
    "numpy==1.26.4",
    "scipy==1.13.0",
    "python-multipart==0.0.9",
    "supabase==2.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
